# pysheets

./: .gitignore  .pylintrc  CONTRIBUTE.MD  LICENSE  MANIFEST.in  Procfile  README.md  ai.py  app.yaml  build.sh  bundle.py  bundle.txt  deploy.sh  firestore.json  main.py  openai.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  runlocal.sh  setup.sh  sourcegraph.json  test.sh  watch.sh
.do/: app.yaml
.github/: FUNDING.yml
.github/workflows/: playwright.yml  pylint.yml  python-app.yml
datafiles/: forbes-ai-50.csv
e2e/: inventory.spec.ts
examples/: tutorial_airports.json  tutorial_basics.json  tutorial_charts.json  tutorial_chess.json
scss/: custom.scss
src/: ai.py  pysheets.py
src/pysheets_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: api.py  constants.py  dag.py  editor.py  history.py  html_maker.py  inventory.py  login.py  lsp.py  main.py  menu.py  models.py  preview.py  profiler.py  prompts.py  pysheets.css  pysheets.js  pysheets.py  selection.py  state.py  storage.py  timeline.py  worker.py
storage/: __init__.py  filesystem.py  firestore.py  identity.py  mongodb.py  settings.py  sqlite.py  tutorials.py
templates/: html.py  index.html  landing.html  landing.prompt
tests/: __init__.py  input.json  inventory.spec.ts  js.py  mocks.py  polyscript.py  pyodide.py  pyscript.py  test_cell.py  test_convert.py  test_edits.py  test_expression.py  test_history.py  test_inputs.py  test_keys.py  test_load.py  test_lsp.py  test_models.py  test_run.py
(+44 files in other folders)
